fix(ci): Fix pgrx feature conflicts in CI/CD workflows
- clippy.yml: Replace --all-features with --features pg16 to avoid multiple PostgreSQL version features
- docs.yml: Add PostgreSQL 16 setup and use --features pg16 instead of --all-features
- coverage.yml: Add --features pg17 to cargo llvm-cov commands for proper feature specification
- security-audit.yml: Add PostgreSQL 16 setup to ensure pgrx dependencies can be resolved

The root cause was that pgrx only allows ONE PostgreSQL version feature (pg13-pg18) to be active at compile time. Using --all-features activated all of them simultaneously, causing build failures.

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run strict clippy with efficient jsonb_delta focus
         run: |
-          cargo clippy --all-targets --all-features -- \
+          cargo clippy --all-targets --features pg16 -- \
             -D warnings \
             -D clippy::all \
             -D clippy::pedantic \
