--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -32,7 +32,7 @@ jobs:
       run: cargo install cargo-llvm-cov
 
     - name: Run tests with coverage
-      run: cargo llvm-cov --lcov --output-path coverage.lcov
+      run: cargo llvm-cov --lcov --output-path coverage.lcov --features pg17
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
@@ -43,7 +43,7 @@ jobs:
         fail_ci_if_error: false
 
     - name: Generate HTML coverage report
-      run: cargo llvm-cov --html --output-dir target/coverage-html
+      run: cargo llvm-cov --html --output-dir target/coverage-html --features pg17
 
     - name: Upload coverage HTML
       uses: actions/upload-artifact@v4
