fix(ci): Add --no-default-features to prevent default pg18 feature conflict
The Cargo.toml has pg18 as the default feature, which was being activated
alongside the explicitly specified version features (pg16, pg17). Using
--no-default-features ensures only the specified PostgreSQL version feature
is active during compilation.

Updated workflows:
- clippy.yml: Add --no-default-features
- docs.yml: Add --no-default-features to both cargo doc commands
- coverage.yml: Add --no-default-features to both cargo llvm-cov commands

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run strict clippy with efficient jsonb_delta focus
         run: |
-          cargo clippy --all-targets --features pg16 -- \
+          cargo clippy --all-targets --no-default-features --features pg16 -- \
             -D warnings \
             -D clippy::all \
             -D clippy::pedantic \
