fix(ci): Add pg_test feature to cargo pgrx test command
The pg_test feature is required for running pgrx tests. Without it, the #[pg_test]
macros fail to resolve. Added --features pg_test to the cargo pgrx test command.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run efficient jsonb_delta tests
         run: |
           # Focus on proven efficient jsonb_delta methods instead of full matrix testing
-          cargo pgrx test pg16
+          cargo pgrx test pg16 --features pg_test
 
       - name: Build extension
         run: |
