--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run efficient jsonb_delta tests
         run: |
           # Focus on proven efficient jsonb_delta methods instead of full matrix testing
-          cargo pgrx test pg16 --features pg_test
+          cargo pgrx test pg16 --no-default-features --features pg16,pg_test
 
       - name: Build extension
         run: |
