fix(ci): Use cargo test instead of cargo pgrx test for library tests
The cargo pgrx test command doesn't properly handle feature flags via CLI.
Switched to using cargo test --lib with explicit --no-default-features and
--features pg16,pg_test to compile and run tests with the correct features.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Run efficient jsonb_delta tests
         run: |
           # Focus on proven efficient jsonb_delta methods instead of full matrix testing
-          cargo pgrx test pg16 --no-default-features --features pg16,pg_test
+          # Use --no-default-features to skip pg18, then specify pg16 explicitly
+          cargo test --lib --no-default-features --features pg16,pg_test
 
       - name: Build extension
         run: |
