fix(ci): Add --sudo flag to cargo pgrx install command
The install command needs sudo privileges to copy the extension binary
to /usr/lib/postgresql/<version>/lib/. This matches the approach used
by jsonb_delta project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,5 @@ jobs:
 
       - name: Install extension
         run: |
-          cargo pgrx install --release --no-default-features --features pg16
+          cargo pgrx install --release --no-default-features --features pg16 --sudo
 
