--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -26,14 +26,22 @@ jobs:
       - name: Install PostgreSQL 16
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-16 postgresql-server-dev-16
+          sudo apt-get install -y postgresql-16 postgresql-server-dev-16 pkg-config
 
       - name: Install pgrx
         run: |
           cargo install --locked cargo-pgrx
           cargo pgrx init --pg16 /usr/lib/postgresql/16/bin/pg_config
 
+      - name: Set PostgreSQL library paths
+        run: |
+          echo "LIBPQ_LIB_DIR=/usr/lib/postgresql/16/lib" >> $GITHUB_ENV
+          echo "PG_CONFIG=/usr/lib/postgresql/16/bin/pg_config" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=/usr/lib/postgresql/16/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+
       - name: Run cargo audit
+        env:
+          RUSTFLAGS: "-C link-arg=-Wl,-rpath,/usr/lib/postgresql/16/lib"
         run: cargo audit --json > audit-report.json
         continue-on-error: true
 
