fix(ci): Add pgrx install step before coverage/audit to resolve linking
- Build and install extension with cargo pgrx install before running llvm-cov
- This ensures all PostgreSQL FFI symbols are properly linked and available
- Removes environment variable complexity that wasn't addressing root cause
- pgrx install resolves symbol availability at the system level

This takes the approach of ensuring proper symbol resolution by building
the extension the same way CI does, rather than trying to patch linker flags.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,21 +28,13 @@ jobs:
     - name: Initialize pgrx
       run: cargo pgrx init --pg16 /usr/lib/postgresql/16/bin/pg_config
 
-    - name: Set PostgreSQL library paths
-      run: |
-        echo "LIBPQ_LIB_DIR=/usr/lib/postgresql/16/lib" >> $GITHUB_ENV
-        echo "PG_CONFIG=/usr/lib/postgresql/16/bin/pg_config" >> $GITHUB_ENV
-        echo "LD_LIBRARY_PATH=/usr/lib/postgresql/16/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+    - name: Build and install extension with pgrx
+      run: cargo pgrx install --release --no-default-features --features pg16 --sudo
 
     - name: Install coverage tools
       run: cargo install cargo-llvm-cov
 
     - name: Run tests with coverage
-      env:
-        RUSTFLAGS: "-C link-arg=-L/usr/lib/postgresql/16/lib -C link-arg=-Wl,-rpath,/usr/lib/postgresql/16/lib"
-        LIBPQ_LIB_DIR: /usr/lib/postgresql/16/lib
-        PG_CONFIG: /usr/lib/postgresql/16/bin/pg_config
-        LD_LIBRARY_PATH: /usr/lib/postgresql/16/lib
       run: cargo llvm-cov --lcov --output-path coverage.lcov --no-default-features --features pg16
 
     - name: Upload coverage to Codecov
@@ -54,11 +46,6 @@ jobs:
         fail_ci_if_error: false
 
     - name: Generate HTML coverage report
-      env:
-        RUSTFLAGS: "-C link-arg=-L/usr/lib/postgresql/16/lib -C link-arg=-Wl,-rpath,/usr/lib/postgresql/16/lib"
-        LIBPQ_LIB_DIR: /usr/lib/postgresql/16/lib
-        PG_CONFIG: /usr/lib/postgresql/16/bin/pg_config
-        LD_LIBRARY_PATH: /usr/lib/postgresql/16/lib
       run: cargo llvm-cov --html --output-dir target/coverage-html --no-default-features --features pg16
 
     - name: Upload coverage HTML
