fix(ci/cd): update security audit to CodeQL v3 and start PostgreSQL in coverage
- Update CodeQL action from deprecated v2 to v3
- Add PostgreSQL service start step to coverage workflow (missing dependency)
- Coverage workflow now properly tests extension with running PostgreSQL

The coverage workflow was failing because psql had no PostgreSQL server
to connect to. Now matches the CI workflow approach.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,6 +22,11 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y postgresql-16 postgresql-server-dev-16 pkg-config
 
+    - name: Start PostgreSQL service
+      run: |
+        sudo systemctl start postgresql
+        sudo systemctl enable postgresql
+
     - name: Install pgrx
       run: cargo install --locked cargo-pgrx
 
