--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -7,6 +7,10 @@ on:
   schedule:
     - cron: '0 0 * * *'  # Daily at midnight UTC
 
+permissions:
+  security-events: write
+  contents: read
+
 jobs:
   audit:
     runs-on: ubuntu-latest
